Add twitter services and import debug

--- a/back/.env
+++ b/back/.env
@@ -6,3 +6,7 @@ EMAIL_ADDRESS=mmdservicetest@gmail.com
 EMAIL_PASSWORD=ervk rrug nzpw wdmn
 FRONTEND_URL=http://localhost:3000
 DEV_MODE=false
+TWITTER_API_KEY=vNSbaWp5DJQhoF8PpNOhZ3QM9
+TWITTER_API_SECRET_KEY=MnGRMLEI63duJs9dnQKMm59Ppey5ZPmPfADDBs4W4ZzLB4bInb
+TWITTER_ACCESS_TOKEN=1474152481802305549-aOT116FUWA0EQ7VUD2yvJuJtKZjr6H
+TWITTER_ACCESS_TOKEN_SECRET=jWy1gsOuvv0YUPOIUFN0UD2RHyFFWcZOxyf6xXAfqQKrk
