--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
     "twitter-api-v2": "^1.19.0",
+    "twitter-lite": "^1.1.0",
     "xlsx": "^0.18.5"
   }
 }
